--- a/src/main/resources/templates/my-loans.html
+++ b/src/main/resources/templates/my-loans.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/search">Search</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/advanced-search">Advanced Search</a>
+                    </li>
                 </ul>
                 
                 <ul class="navbar-nav">
