--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -24,6 +24,7 @@
 				<ul class="navbar-nav me-auto">
 					<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 					<li class="nav-item"><a class="nav-link active" href="/search">Search</a></li>
+					<li class="nav-item"><a class="nav-link" href="/advanced-search">Advanced Search</a></li>
 				</ul>
 				<ul class="navbar-nav">
 					<li class="nav-item" th:if="${user != null}"><a class="nav-link" href="/loans/my-loans"><i class="fas fa-book-reader"></i> My Loans</a></li>
